[tool.poetry]
name = "python-newsfeed"
version = "0.1.0"
description = ""
authors = ["Benzinga <dev@benzinga.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
